# BaryGNN

./: .gitignore  README.md  README_optuna.md  hello_world.py  pyproject.toml  requirements.txt  run_cross_validation.py  run_hello_world.sh  run_optuna.py  run_slurm.py  run_slurm_optuna.py  train.py  vast  vast.pub  vast2  vast2.pub
barygnn/: __init__.py
barygnn/config/: __init__.py  config.py  default_barycentric_config.yaml  default_config.yaml  default_optuna_config.yaml  default_regular_pooling_config.yaml  example_optuna_config.yaml  optuna_config.py
barygnn/config/test_configs/: barycenter_test_MUTAG_combined.yaml  barycenter_test_PROTEINS_combined.yaml  barycentric_test_MUTAG.yaml  barycentric_test_PROTEINS.yaml  (+14 more)
barygnn/data/: __init__.py  dataset.py
barygnn/datasets/: __init__.py  dataset.py
barygnn/losses/: __init__.py  regularization.py
barygnn/models/: __init__.py  barygnn.py
barygnn/scripts/: evaluate.py  run_experiments.py  run_slurm.py  train.py
barygnn/utils/: __init__.py  logger.py  metrics.py
examples/: barygnn_config.yaml  barygnn_config_MUTAG_combined.yaml  barygnn_config_MUTAG_final.yaml  barygnn_config_MUTAG_geomloss.yaml  barygnn_config_MUTAG_hirerchical.yaml  barygnn_config_PROTEINS_combined.yaml  barygnn_config_PROTEINS_geomloss.yaml  barygnn_config_PROTEINS_hierarchical.yaml  barygnn_config_training.py
optuna_studies/: ENZYMES_Opt_Real_1_tryout2.db  ENZYMES_Opt_Real_Refined_1.db  ENZYMES_Opt_Real_Refined_2.db  IMDB_B_Opt_Refine.db  IMDB_M_Opt_Real_1_tryout2.db  IMDB_M_Opt_Real_1_tryout3.db  IMDB_M_Opt_Real_1_tryout5.db  MOLHIV_Opt_Real_2.db  MUTAG_Opt_Refine_2.db  MUTAG_Opt_Refine_3.db  PROTEINS_Opt_Real_1_tryout2.db
(+44 files in other folders)
