[project]
name = "barygnn"
description = "BaryGNN: Barycenter pooling methods for Graph Neural Networks"
version = "0.1.0"
authors = [
    { name = "Matan Fainzilber", email = "fainzilber@mail.tau.ac.il" }
]
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torch-geometric",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "wandb",
    "scikit-learn",
    "geomloss==0.2.6",
    "pykeops==2.3",         
    "keopscore==2.3",
    "optuna>=3.0.0",
    "plotly>=5.0.0",
    "ogb>=1.3.6"
]

[build-system]
requires = ["uv"]
build-backend = "uv.build"